@@ -1179,5 +1179,5 @@ generic_uri="http://www.userfriendly.org/cartoons/archives/%y%b/uf0085%d.gif"
         <restrict>4</restrict>
         <restrict>6</restrict>
         <restrict>7</restrict>
-</comic>	
+</comic>
 </comic_list>
